--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li><a href="#">Achievements</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact us</a></li>
-				<li><a href="#">Campus life</a></li>
+				<li><a href="#campus_life">Campus life</a></li>
 			</ul>
 			<iframe id="video" width="642" height="361" src="https://www.youtube.com/embed/Nwxl7hGrKkI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
